# streaming-gateway

./: .gitignore  CMakeLists.txt  LICENSE  README.md
TCPStreamer/: CMakeLists.txt  TCPPublisher.h  TCPStreamer.cpp  TCPStreamer.h  main.cpp  tcp_frame_producer_main.cpp  tcp_producing.cpp  tcp_producing.h
TCPStreamer/src/: TCPPublisher.h  TCPStreamer.h  tcp_frame_producer_main.cpp
core/: CMakeLists.txt
core/common/: CMakeLists.txt
core/common/src/: HandleStreamDaemon.cpp  cli.cpp  cli.h  exporters.cpp  ipc_message_queue.cpp  ipc_message_queue.h  shared_memory_manager.cpp
qa/: BaseTest.h  main.cpp  qa_main.cpp  test_shared_memory_manager.cpp  test_shared_memory_manager.h  test_shared_memory_manager.hpp  test_shared_memory_manager.py  test_webcam_streamer_queue.hpp
qa/test_shared_memory_manager/: test_shared_memory_manager.cpp
qa/test_webcam_streamer_queue/: test_webcam_streamer_queue.cpp
src/: HandleStreamDaemon.cpp  HandleStreamDaemon.h  WebCam.cpp  WebCam.h  constants.h  exporters.cpp  exporters.h  http.cpp  http.h  ipc_message_queue.cpp  ipc_message_queue.h  logging.cpp  logging.h  main.cpp  shared_memory_manager.cpp  shared_memory_manager.h  utils.cpp  utils.h  wc_daemon.cpp  wc_daemon.h  webcam_handler.cpp  webcam_streamer.cpp
webcam/: CMakeLists.txt
webcam/src/: WebCam.cpp  WebCam.h  webcam_streamer.cpp
